[project]
name = "YTMusicDL"
version = "2.0.0a0"
authors = [
  { name="RaduTek", email="radutek13@gmail.com" },
]
description = "YouTube Music downloader with metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp>=2024.01.01",
    "ytmusicapi>=0.30.0",
    "mutagen>=1.45.1",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/RaduTek/YTMusicDL"
Issues = "https://github.com/RaduTek/YTMusicDL/issues"

[project.scripts]
ytmusicdl = "ytmusicdl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build]
files = ["src/YTMusicDL/*"]