[project]
name = "YTMusicDL"
version = "2.0b1"
authors = [
  { name="RaduTek", email="me@radutek.uk" },
]
description = "YouTube Music downloader with metadata"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp>=2025.6.30",
    "ytmusicapi>=1.10.3",
    "mutagen>=1.47.0",
    "typeguard>=4.4.4",
]

[project.urls]
Homepage = "https://github.com/RaduTek/YTMusicDL"
Issues = "https://github.com/RaduTek/YTMusicDL/issues"

[project.scripts]
ytmusicdl = "ytmusicdl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build]
files = ["src/YTMusicDL/*"]